--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -63,13 +63,16 @@
                   transform="translate(0 -4.5)" fill="#444" />
               </svg>
             </div>
-            <div class="groupName">{{group.name}}</div>
+            <div class="groupName" onclick="location.href='{% url 'dispatch:regularly' %}?group={{group.id}}&date={{date}}'">{{group.name}}</div>
           </div>
           {% for route in group.regularly_info.all %}
           <div class="routeItem {{route.id}}">
             <!--클래스에 노선 아이디 추가-->
             <div class="routeGap"></div>
-            <div onclick="location.href='{% url 'dispatch:regularly' %}?id={{route.id}}&group={{group.id}}'" class="routeName">{{route.route}}</div>
+            <div class="routeNameBox" onclick="location.href='{% url 'dispatch:regularly' %}?id={{route.id}}&group={{group.id}}&date={{date}}'">
+              <div class="routeNumber">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</div>
+              <div class="routeName">{{route.route}}</div>
+            </div>
           </div>
           {% endfor %}
         </div>
@@ -182,7 +185,7 @@
 
   <div class="mainLayout">
 
-    <form class="toolbar">
+    <div class="toolbar">
       <span class="toolbarTitle">날짜검색</span>
       <input autocomplete="off" type="date" name="date" class="searchDate" max="9999-12-31">
       <div class="dateControllBtnBox">
@@ -202,8 +205,8 @@
           </svg>
         </div>
       </div>
-      <input autocomplete="off" type="submit" class="btnModules searchBtn" value="검색">
-    </form>
+      <div class="btnModules searchBtn" onclick="dateSearch()">검색</div>
+    </div>
 
 
     <div class="routeDataArea">
@@ -323,18 +326,18 @@
 
     <form method="post" action="{% url 'dispatch:regularly_connect_create' %}" class="RouteList">
       {% csrf_token %}
+      <input autocomplete="off" value="{{detail.group_id}}" name="group" type="hidden">
       <input autocomplete="off" value="{{detail.id}}" name="id" type="hidden">
       <input autocomplete="off" value="{{date}}" name="date" type="hidden">
       <div class="RouteListHead">
         <span>{{group.name}}</span>
         <div class="RouteListHeadBtnBox">
-          <div class="btnModules dispatchPrintBtn">인쇄</div>
+          <div class="btnModules dispatchPrintBtn" onclick="opendispatchPrint('/dispatch/print/regularly')">인쇄</div>
           <div class="btnModules dispatchDeletBtn">배차삭제</div>
           <input autocomplete="off" type="submit" class="btnModules dispatchSaveBtn" value="저장">
           <div class="btnModules dispatchHistory">배차내역</div>
           <div class="btnModules">지난배차(2주전)</div>
           <div class="btnModules">지난배차(1주전)</div>
-          <div class="btnModules">액셀 내려받기</div>
         </div>
       </div>
 
@@ -369,10 +372,10 @@
               <td>
                 <input autocomplete="off" value="{{order.id}}" name="check" type="checkbox">
               </td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'">{{order.route}}</td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'">{{order.departure_time}} ~ {{order.arrival_time}}</td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}'"{% endif %}>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.route}}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.departure_time}} ~ {{order.arrival_time}}</td>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %}
                   <input autocomplete="off" value="{{bus.vehicle_num}}" type="text">
                   <input autocomplete="off" value="{{bus.id}}" name="bus" type="hidden">
@@ -380,7 +383,7 @@
                   {{bus.vehicle_num}}
                 {% endif %}
               </td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'"{% endif %}>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %} 
                   <select name="driver">
                     <option value="{{driver.id}}">{{driver.name}}</option>
@@ -389,7 +392,7 @@
                   {{driver.name}}
                 {% endif %}
               </td>
-              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'"{% endif %}>
+              <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %}
                 <select name="outsourcing">
                   <option value="{{outsourcing.id}}">{{outsourcing.name}}</option>
@@ -398,7 +401,7 @@
                   {{outsourcing.name}}
                 {% endif %}
               </td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{group.id}}&height={{forloop.counter}}'">{{order.departure}} ▶ {{order.arrival}}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.departure}} ▶ {{order.arrival}}</td>
             </tr>
             {% endwith %}
             {% endwith %}
@@ -585,6 +588,40 @@
   console.log("outsourcingObj", outsourcingObj)
   {% endautoescape %}
  </script>
+
+<script>
+
+  let parms = new URLSearchParams(location.search)
+  let targetLink = ""
+  let urlDate = ""
+  if(parms.has("date")){
+    urlDate = window.location.search.split("date=")[1].split("&")[0]
+  }
+  let urlGroup = ""
+  if(parms.has("group")){
+    urlGroup = window.location.search.split("group=")[1].split("&")[0]
+  }
+
+  function opendispatchPrint(url){
+    if(window.location.search){
+    targetLink = `${url}?date=${urlDate}&group=${urlGroup}`
+    window.open(targetLink, `${urlDate}배차표`, "width=1640, height=640")
+    }else{
+      alert("그룹 또는 노선을 선택해 주세요")
+    }
+  }
+
+ </script>
+
+<script>
+
+  function dateSearch(){
+    targetLink = `${window.location.href.split("?")[0]}?group=${urlGroup}&date=${searchDate.value}`
+    location.href = targetLink
+  }
+
+ </script>
+
 <script src="{% static 'js/dispatch/regularly/regularlyOnload.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/groupControll.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/regularlyChangeLayout.js' %}"></script>
@@ -592,7 +629,7 @@
 <script src="{% static 'js/dispatch/regularly/regularlyDate.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/selectRoute.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/routeChecker.js' %}"></script>
-<script src="{% static 'js/dispatch/common/FullSchedule.js' %}"></script>
+<script src="{% static 'js/dispatch/regularly/FullSchedule.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/regularlyDispatch.js' %}"></script>
 <script src="{% static 'js/dispatch/regularly/dispatchDelete.js' %}"></script>
 {% endblock %}
