--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -44,6 +44,52 @@
         </ul>
       </div>
 
+      <svg class="hembeger" xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17">
+        <g id="그룹_1420" data-name="그룹 1420" transform="translate(-12095 1576)">
+          <g id="사각형_12564" data-name="사각형 12564" transform="translate(12095 -1576)" fill="#fff" stroke="#707070" stroke-width="0.4">
+            <rect width="24" height="3" rx="1.5" stroke="none"/>
+            <rect x="0.2" y="0.2" width="23.6" height="2.6" rx="1.3" fill="none"/>
+          </g>
+          <g id="사각형_12565" data-name="사각형 12565" transform="translate(12095 -1569)" fill="#fff" stroke="#707070" stroke-width="0.4">
+            <rect width="24" height="3" rx="1.5" stroke="none"/>
+            <rect x="0.2" y="0.2" width="23.6" height="2.6" rx="1.3" fill="none"/>
+          </g>
+          <g id="사각형_12566" data-name="사각형 12566" transform="translate(12095 -1562)" fill="#fff" stroke="#707070" stroke-width="0.4">
+            <rect width="24" height="3" rx="1.5" stroke="none"/>
+            <rect x="0.2" y="0.2" width="23.6" height="2.6" rx="1.3" fill="none"/>
+          </g>
+        </g>
+      </svg>
+
+      <div class="hembegerMenuBox">
+        <div class="closeBtnBox">
+          <svg class="closeBtn" xmlns="http://www.w3.org/2000/svg" width="22.237" height="20.241" viewBox="0 0 22.237 20.241">
+            <g id="그룹_1421" data-name="그룹 1421" transform="translate(-12122.38 1577.62)">
+              <line id="선_635" data-name="선 635" x2="18" y2="16" transform="translate(12124.5 -1575.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-width="3"/>
+              <line id="선_636" data-name="선 636" x1="17" y2="16" transform="translate(12124.5 -1575.5)" fill="none" stroke="#000" stroke-linecap="round" stroke-width="3"/>
+            </g>
+          </svg>
+          
+        </div>
+        <div class="hembegerMenu">
+            <a href="{% url 'homepage:homepage' %}">
+              <span class="menuLi">TRP 주요기능</span>
+            </a>
+            <a href="{% url 'homepage:payment' %}">
+              <span class="menuLi">가격정책</span>
+            </a>
+            <a href="{% url 'homepage:question' %}">
+              <span class="menuLi">가입문의</span>
+            </a>
+            <a href="{% url 'homepage:faq' %}">
+              <span class="menuLi">FAQ</span>
+            </a>
+        </div>
+      </div>
+      
+      
+      
+
     </div>
   </header>
 
@@ -107,23 +153,33 @@
   <div class="thirdSection">
 
     <div class="thirdSectionBg thirdSectionBg2">
-      <img src="{% static 'images/thirdBg2.png' %}" alt="">
+      <div class="imgSizing">
+        <img src="{% static 'images/thirdBg2.png' %}" alt="">
+      </div>
     </div>
 
     <div class="thirdSectionBg thirdSectionBg3">
-      <img src="{% static 'images/thirdBg3.png' %}" alt="">
+      <div class="imgSizing">
+        <img src="{% static 'images/thirdBg3.png' %}" alt="">
+      </div>
     </div>
 
     <div class="thirdSectionBg thirdSectionBg4">
-      <img src="{% static 'images/thirdBg4.png' %}" alt="">
+      <div class="imgSizing">
+        <img src="{% static 'images/thirdBg4.png' %}" alt="">
+      </div>
     </div>
 
     <div class="thirdSectionBg thirdSectionBg5">
-      <img src="{% static 'images/thirdBg5.png' %}" alt="">
+      <div class="imgSizing">
+        <img src="{% static 'images/thirdBg5.png' %}" alt="">
+      </div>
     </div>
 
     <div class="thirdSectionBg thirdSectionBg6">
-      <img src="{% static 'images/thirdBg6.png' %}" alt="">
+      <div class="imgSizing">
+        <img src="{% static 'images/thirdBg6.png' %}" alt="">
+      </div>
     </div>
 
     <div class="thirdMainTitle">
@@ -131,6 +187,7 @@
         <span>function of the program</span>
         <span>프로그램의 기능</span>
         <img src="{% static 'images/thirdTItleIcon.png' %}" alt="">
+        <img src="{% static 'images/thirdTItleIconSmall.png' %}" alt="">
       </div>
       <div class="visibleSecond">
         <div class="visibleSecondTitle">
@@ -210,8 +267,8 @@
       <div class="fourthSectionContents">
         킹버스의 비전인 전세버스 3축체계로<br>
         고객과 회사를 연결하는 전세버스 예약 플랫폼,<br>
-        기사와 회사를 연결하는 기사 과리 앱,<br>
-        고객과 기사를 연결하느 배차과리 프로그램으로<br>
+        기사와 회사를 연결하는 기사 관리 앱,<br>
+        고객과 기사를 연결하느 배차관리 프로그램으로<br>
         전세버스 시장에 혁신적인 비전을 제시합니다.
       </div>
     </div>
@@ -238,6 +295,7 @@
   <script src="{% static 'js/homepage/refreshTop.js' %}"></script>
   <script src="{% static 'js/homepage/secondSectionAnimation.js' %}"></script>
   <script src="{% static 'js/homepage/thirdSectionAnimation.js' %}"></script>
+  <script src="{% static 'js/homepage/hembegerMenu.js' %}"></script>
 </body>
 
 </html>
