--- a/static/css/dispatch/dispatchBase.css
+++ b/static/css/dispatch/dispatchBase.css
@@ -116,7 +116,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    height: 2.6rem;
+    height: 3.6rem;
 }
 
 .scheduleTableTr:hover {
@@ -186,9 +186,13 @@
     background-color: #444;
 }
 
-.otherDriver{
-    border: 0.2rem solid black;
-    box-sizing: border-box;
+.otherDriver::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.6;
 }
 
 
