--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -30,7 +30,7 @@
   box-sizing: border-box;
 }
 
-.scheduleHeader{
+.scheduleHeader {
   color: white;
 }
 
@@ -321,7 +321,8 @@
 .dispatcTable .tdTypeB {
   width: 25%;
 }
-.DriverSelectBox{
+
+.DriverSelectBox {
   display: flex;
 }
 
@@ -390,7 +391,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 34rem;
+  width: 21.5rem;
   height: 3.6rem;
 }
 
@@ -590,7 +591,7 @@
   box-sizing: border-box;
 }
 
-.orderListMainTotal{
+.orderListMainTotal {
   width: 100%;
 }
 
@@ -665,4 +666,108 @@
 
 .thisRoute {
   background-color: #29b68b;
+}
+
+
+
+
+/* 경유지 */
+.waypointBox {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 0.8rem;
+  box-sizing: border-box;
+}
+
+.inputTextDeparture {
+  width: calc(100% - 10rem);
+}
+
+.waypoinBtn {
+  background-color: #0069D9;
+}
+
+.popupArticleCategori {
+  width: 100%;
+  padding-bottom: 0.4rem;
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border-bottom: 0.1rem solid black;
+}
+
+.popupArticleCategori:nth-child(1) {
+  margin-top: 0;
+}
+
+.popupArticleBoxTable {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  margin-top: 2rem;
+}
+
+.scrolling_table-list_body {
+  height: 14.4rem;
+}
+
+.popupArticleBoxTable td:nth-child(1) {
+  width: 4%;
+}
+
+.popupArticleBoxTable td:nth-child(2) {
+  width: 40%;
+}
+
+.popupArticleBoxTable td:nth-child(3) {
+  width: 16%;
+}
+
+.popupArticleBoxTable td:nth-child(4) {
+  width: 16%;
+}
+
+.popupArticleBoxTable td:nth-child(5) {
+  width: 26%;
+}
+
+.waypointCloseBtn {
+  background-color: #444;
+}
+
+.popupFooter{
+  position: relative;
+}
+
+.waypointDeleteBtn{
+  position: absolute;
+  left: 0;
+  background-color: #444;
+}
+
+.addWaypointBtn{
+  background-color: #0069D9;
+  margin-left: auto;
+}
+
+.waypointTable input[type=text]{
+  text-align: center;
+  width: 100%;
+  height: 3.6rem;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.waypointTable input[name=waypoint]{
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.addtionalBtn{
+  background-color: #0069D9;
+  margin-right: 1rem;
 }
