--- a/static/css/homepage/home.css
+++ b/static/css/homepage/home.css
@@ -44,9 +44,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 86%;
   height: 100%;
-  padding: 0 22rem;
   box-sizing: border-box;
   background-color: transparent;
 }
@@ -97,6 +96,45 @@ header {
 
 .BlackMenuLi:hover {
   color: #0069D9;
+}
+
+.hembeger{
+  display: none;
+}
+.hembegerMenuBox{
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  right: -100%;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  transition-duration: 0.3s;
+}
+.closeBtnBox{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: 4rem;
+  padding: 0 1.2rem;
+  box-sizing: border-box;
+}
+.hembegerMenu{
+  width: 100%;
+  height: 25rem;
+}
+.hembegerMenu a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 6rem;
+  border-bottom: 0.1rem solid black;
+}
+.hembegerMenu a span{
+  color: black;
+  font-size: 1.6rem;
 }
 
 
@@ -322,7 +360,7 @@ header {
 }
 
 
-.visibleFirst img {
+.visibleFirst img:nth-child(3){
   position: absolute;
   top: 52%;
   opacity: 0;
@@ -330,6 +368,18 @@ header {
   transition-duration: 0.8s;
   transition-timing-function: ease;
 }
+
+.visibleFirst img:nth-child(4){
+  display: none;
+  position: absolute;
+  top: 52%;
+  opacity: 0;
+  transition-delay: 1.5s;
+  transition-duration: 0.8s;
+  transition-timing-function: ease;
+}
+
+
 
 /* 2 */
 .visibleSecond {
